--- a/styles/section.css
+++ b/styles/section.css
@@ -2,6 +2,21 @@
   img {
     height: 100%;
     object-fit: cover;
+  }
+
+  .card {
     border-radius: 4px;
+    overflow: hidden;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(
+        180deg,
+        transparent 0%,
+        #020617 100%
+      );
+    }
   }
 }
